MicroServices_Architecture/K8s/carttransactionservice-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: carttransactioonservice-srv
spec:
  type: NodePort
  selector:
    app: carttransactionservice
  ports:
    - name: carttransactionservice
      protocol: TCP
      port: 80
      targetPort: 80
