MicroServices_Architecture/K8s/liquorsales-np-srv.yaml
apiVersion: v1
kind: Service
metadata: 
  name: liquorsalesnpservice-srv
spec:
  type:NodePort
  selector: 
    app: liquorsalesservice
  ports:
    - name: liquorsalesservice
      protocol: TCP
      port: 80
      targetPort: 80
