MicroServices_Architecture/K8s/orderservices-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderapi-depl
spec:
  replicas: 1
  selector:
    matchlabels:
      app: orderservices
  template:
    metadata:
      labels:
        app: orderservices
    spec:
      containers:
        - name: orderservices
          image: keljombo/orderservices:latest
---
apiVersion: v1
kind: Service
metadata:
  name: orderapi-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: orderservices
  ports:
    - name: orderservices
      protocol: TCP
      port: 80
      targetport: 80
